--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Здесь должны быть три тега c сервиса Google fonts для подключения шрифтов  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>It-incubator precourse</title>
 </head>
 <body data-cy="hw2-body">
-    <header data-cy="hw2-header">
-        <span data-cy="hw2-header-span">IT-INCUBATOR</span>
+    <header class="header" data-cy="hw2-header">
+        <span class="header-span" data-cy="hw2-header-span">IT-INCUBATOR</span>
     </header>
 
     <section class="main-section" data-cy="hw2-section-main-pre">
